# thingkaton

./: .nova  Dockerfile  README.md  pyproject.toml
thingkaton/: __init__.py  __main__.py  app.py
thingkaton/wakurobotics/: __init__.py
thingkaton/wakurobotics/care/: __init__.py  client.py
thingkaton/wakurobotics/care/devices/v1/: __init__.py  connection_schema.py  error_schema.py  errorlog_schema.py  factsheet_schema.py  order_schema.py  values_schema.py
thingkaton/wakurobotics/care/devices/v1/shared/: __init__.py  position_schema.py  value_schema.py
