[project]
name = "thingkaton"
version = "0.0.1"
description = ""
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.111.0,<0.112",
    "loguru>=0.7.2,<0.8",
    "wandelbots-nova>=1.5,<1.6",
    "python-decouple~=3.8",
    "requests>=2.32.3,<3",
    "paho-mqtt",
]


[dependency-groups]
dev = [
    "pylint==2.17",
    "ruff>=0.11.9",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
